--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -2,18 +2,18 @@
   <parent>
     <artifactId>continuum-parent</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.0-beta-1-SNAPSHOT</version>
+    <version>1.0-beta-1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-model</artifactId>
   <name>Continuum Model</name>
-  <version>1.0-beta-1-SNAPSHOT</version>
+  <version>1.0-beta-1</version>
   <build>
     <plugins>
       <plugin>
         <groupId>org.codehaus.modello</groupId>
         <artifactId>modello-maven-plugin</artifactId>
-        <version>1.0-alpha-4</version>
+        <version>1.0-alpha-5</version>
         <executions>
           <execution>
             <goals>
