Added support for jar:deploy
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@331911 13f79535-47bb-0310-9956-ffa450edef68

--- a/project.properties
+++ b/project.properties
@@ -2,3 +2,9 @@ maven.repo.remote=\
 http://dist.codehaus.org,\
 http://www.ibiblio.org/maven,\
 http://cvs.apache.org/repository
+
+maven.repo.list=apache
+maven.repo.apache=scp://cvs.apache.org
+maven.repo.apache.directory=/www/cvs.apache.org/repository
+maven.repo.apache.username=${user.name}
+
