--- a/project.properties
+++ b/project.properties
@@ -8,3 +8,9 @@ maven.repo.apache=scp://cvs.apache.org
 maven.repo.apache.directory=/www/cvs.apache.org/repository
 maven.repo.apache.username=${user.name}
 
+
+maven.compile.source=1.4
+maven.compile.target=1.4
+#maven.compile.deprecation=true
+maven.compile.debug=true
+maven.compile.optimize=true
