--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,42 @@
   <version>1.0-SNAPSHOT</version>
   <name>Maven Quick Start Archetype</name>
   <url>http://maven.apache.org</url>
+  <build>
+      <plugins>
+	<plugin>
+	  <groupId>org.codehaus.plexus</groupId>
+	  <artifactId>plexus-maven-plugin</artifactId>
+	  <version>1.1</version>
+	  <executions>
+	    <execution>
+	      <goals>
+		<goal>descriptor</goal>
+	      </goals>
+	    </execution>
+	  </executions>
+	</plugin>
+      </plugins>
+  </build>   
+  <repositories>
+    <repository>
+      <releases>
+	<enabled>false</enabled>
+      </releases>
+      <id>snapshots</id>
+      <name>Maven Snapshot Development Repository</name>
+      <url>http://snapshots.maven.codehaus.org/maven2</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <releases>
+	<enabled>false</enabled>
+      </releases>
+      <id>snapshots</id>
+      <name>Maven Central Plugins Development Repository</name>
+      <url>http://snapshots.maven.codehaus.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
