Test case involving queues now works.  Removed hard-coded paths in test case. No longer need MainTest.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@344192 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
     </pluginRepository>
   </pluginRepositories>
   <dependencies>
+
+    <!-- need this till my activemq-core-3.2.pom patch is applied -->
+    <!-- http://jira.codehaus.org/browse/MEV-193 -->
+    <dependency>
+      <groupId>concurrent</groupId>
+      <artifactId>concurrent</artifactId>
+      <version>1.3.4</version>
+    </dependency>
+
+
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-api</artifactId>
