--- a/continuum-notifiers/continuum-notifier-api/pom.xml
+++ b/continuum-notifiers/continuum-notifier-api/pom.xml
@@ -1,11 +1,11 @@
 <project>
   <parent>
-    <artifactId>continuum-parent-notifiers</artifactId>
+    <artifactId>continuum-notifiers</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-notifier-api</artifactId>
   <name>Continuum Notifier API</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.0.1</version>
 </project>
