--- a/continuum-notifiers/continuum-notifier-irc/pom.xml
+++ b/continuum-notifiers/continuum-notifier-irc/pom.xml
@@ -1,18 +1,18 @@
 <project>
   <parent>
-    <artifactId>continuum-parent-notifiers</artifactId>
+    <artifactId>continuum-notifiers</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-notifier-irc</artifactId>
   <name>Continuum IRC Notifier</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <dependencies>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-ircbot</artifactId>
-      <version>1.1-alpha-6-SNAPSHOT</version>
+      <version>1.1-alpha-6</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
