--- a/continuum-notifiers/continuum-notifier-jabber/pom.xml
+++ b/continuum-notifiers/continuum-notifier-jabber/pom.xml
@@ -1,13 +1,13 @@
 <project>
   <parent>
-    <artifactId>continuum-parent-notifiers</artifactId>
+    <artifactId>continuum-notifiers</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-notifier-jabber</artifactId>
   <name>Continuum Jabber Notifier</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-jabber</artifactId>
-      <version>1.0-alpha-3-SNAPSHOT</version>
+      <version>1.0-alpha-3</version>
     </dependency>
   </dependencies>
 </project>
