--- a/continuum-notifiers/continuum-notifier-msn/pom.xml
+++ b/continuum-notifiers/continuum-notifier-msn/pom.xml
@@ -1,13 +1,13 @@
 <project>
   <parent>
-    <artifactId>continuum-parent-notifiers</artifactId>
+    <artifactId>continuum-notifiers</artifactId>
     <groupId>org.apache.maven.continuum</groupId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>continuum-notifier-msn</artifactId>
   <name>Continuum MSN Notifier</name>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.0.1</version>
   <dependencies>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
