--- a/gbuild-agent/pom.xml
+++ b/gbuild-agent/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>gbuild-agent</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Maven Quick Start Archetype</name>
+  <name>GBuild Agent</name>
   <url>http://maven.apache.org</url>
   <build>
     <plugins>
