--- a/gbuild-report/pom.xml
+++ b/gbuild-report/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>gbuild-report</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Maven Quick Start Archetype</name>
+  <name>GBuild Report</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
