--- a/pom.xml
+++ b/pom.xml
@@ -2,31 +2,95 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.geronimo.gbuild</groupId>
-  <artifactId>gbuild</artifactId>
-  <packaging>jar</packaging>
+  <artifactId>gbuild-parent</artifactId>
+  <packaging>pom</packaging>
+  <name>GBuild Parent Project</name>
   <version>1.0-SNAPSHOT</version>
-  <name>Maven Quick Start Archetype</name>
-  <url>http://maven.apache.org</url>
-  <build>
-      <plugins>
-	<plugin>
-	  <groupId>org.codehaus.plexus</groupId>
-	  <artifactId>plexus-maven-plugin</artifactId>
-	  <version>1.1</version>
-	  <executions>
-	    <execution>
-	      <goals>
-		<goal>descriptor</goal>
-	      </goals>
-	    </execution>
-	  </executions>
-	</plugin>
-      </plugins>
-  </build>   
+  <issueManagement>
+    <system>jira</system>
+    <url>http://issues.apache.org/jira/browse/GERONIMO</url>
+  </issueManagement>
+  <ciManagement>
+    <system>continuum</system>
+    <url>http://ci.gbuild.org/continuum</url>
+    <notifiers>
+      <notifier>
+        <configuration>
+          <address>scm@geronimo.apache.org</address>
+        </configuration>
+      </notifier>
+    </notifiers>
+  </ciManagement>
+  <inceptionYear>2005</inceptionYear>
+  <mailingLists>
+    <mailingList>
+      <name>Continuum Dev List</name>
+      <subscribe>continuum-dev-subscribe@maven.apache.org</subscribe>
+      <unsubscribe>continuum-dev-unsubscribe@maven.apache.org</unsubscribe>
+      <archive>http://mail-archives.apache.org/mod_mbox/maven-continuum-dev/</archive>
+    </mailingList>
+    <mailingList>
+      <name>Continuum User List</name>
+      <subscribe>continuum-users-subscribe@maven.apache.org</subscribe>
+      <unsubscribe>continuum-users-unsubscribe@maven.apache.org</unsubscribe>
+      <archive>http://mail-archives.apache.org/mod_mbox/maven-continuum-users/</archive>
+    </mailingList>
+    <mailingList>
+      <name>Apache Announce List</name>
+      <subscribe>announce-subscribe@apache.org</subscribe>
+      <unsubscribe>announce-unsubscribe@apache.org</unsubscribe>
+      <post>announce@apache.org</post>
+      <archive>mail-archives.apache.org/mod_mbox/www-announce/</archive>
+    </mailingList>
+  </mailingLists>
+   <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <id>dblevins</id>
+      <name>David Blevins</name>
+      <email>dblevins@apache.org</email>
+      <organization>Geronimo</organization>
+      <roles>
+        <role>Java Developer</role>
+        <role>PMC Member</role>
+      </roles>
+      <timezone>-8</timezone>
+    </developer>
+    <developer>
+      <id>dain</id>
+      <name>Dain Sundstrom</name>
+      <email>dain@apache.org</email>
+      <organization>Geronimo</organization>
+      <roles>
+        <role>Java Developer</role>
+        <role>PMC Member</role>
+      </roles>
+      <timezone>-8</timezone>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</connection>
+    <developerConnection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/geronimo/gbuild/trunk/</url>
+  </scm>
+  <organization>
+    <name>Apache</name>
+    <url>http://www.apache.org/</url>
+  </organization>
+  <modules>
+    <module>gbuild-agent</module>
+    <module>gbuild-report</module>
+  </modules>
   <repositories>
     <repository>
       <releases>
-	<enabled>false</enabled>
+        <enabled>false</enabled>
       </releases>
       <id>snapshots</id>
       <name>Maven Snapshot Development Repository</name>
@@ -36,7 +100,7 @@
   <pluginRepositories>
     <pluginRepository>
       <releases>
-	<enabled>false</enabled>
+        <enabled>false</enabled>
       </releases>
       <id>snapshots</id>
       <name>Maven Central Plugins Development Repository</name>
@@ -52,8 +116,6 @@
       <artifactId>concurrent</artifactId>
       <version>1.3.4</version>
     </dependency>
-
-
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-api</artifactId>
