Test cases now use the ActiveMQ broker cotnainer which makes setting the port and starting the broker very easy. Added new BuildAgents to the application.xml for producing builds and grabbing the results. Various logging improvements. MessagingClient is a completely failed concept.  Going to kill it.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@345467 13f79535-47bb-0310-9956-ffa450edef68

--- a/gbuild-agent-application/test.properties
+++ b/gbuild-agent-application/test.properties
@@ -1,3 +1,8 @@
 app.name=gbuild-agent
 app.long.name=gbuild-agent
 app.description=GBuild Agent
+
+
+build.results.topic=BUILD.RESULTS
+build.tasks.queue=BUILD.TASKS
+broker.url=tcp://ci.gbuild.org:6161
