--- a/gbuild-agent-application/app.properties
+++ b/gbuild-agent-application/app.properties
@@ -1,3 +1,9 @@
 app.name=gbuild-agent
 app.long.name=gbuild-agent
 app.description=GBuild Agent
+
+
+build.results.topic=BUILD.RESULTS
+build.tasks.queue=BUILD.TASKS
+broker.host=ci.gbuild.org
+broker.port=6161
