--- a/gbuild-agent-application/pom.xml
+++ b/gbuild-agent-application/pom.xml
@@ -41,7 +41,7 @@
           <applicationConfiguration>src/conf/application.xml</applicationConfiguration>
           <configurationsDirectory>src/conf</configurationsDirectory>
           <configurationProperties>${appProperties}</configurationProperties>
-          <applicationName>continuum</applicationName>
+          <applicationName>gbuild-agent</applicationName>
           <runtimeConfiguration>src/test/conf/test-runtime-configuration.xml</runtimeConfiguration>
           <runtimeConfigurationProperties>${appProperties}</runtimeConfigurationProperties>
           <runtimePath>target/plexus-test-runtime</runtimePath>
