--- a/gbuild-report/pom.xml
+++ b/gbuild-report/pom.xml
@@ -7,6 +7,30 @@
   <version>1.0-SNAPSHOT</version>
   <name>GBuild Report</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+	<executions>
+	  <execution>
+	    <phase>process-classes</phase>
+	    <goals>
+	      <goal>run</goal>
+	    </goals>
+	    <configuration>
+	      <tasks>
+		<mkdir dir="${basedir}/target/classes/META-INF/org/apache/geronimo/gbuild/report"/>
+		<zip destfile="${basedir}/target/classes/META-INF/org/apache/geronimo/gbuild/report/resources.zip">
+		  <fileset dir="${basedir}/src/main/report-resources"/>
+		</zip>
+	      </tasks>
+	    </configuration>
+	  </execution>
+	</executions>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>velocity</groupId>
