Added in the web component.  Also new component to watch the queue and add more stuff when it's empty.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@367548 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
   </build>
   <modules>
     <module>gbuild-agent</module>
+    <module>gbuild-agent-web</module>
     <module>gbuild-report</module>
     <module>gbuild-agent-application</module>
   </modules>
@@ -153,11 +154,6 @@
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-cvs</artifactId>
       <version>1.0-beta-1-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>geronimo-spec</groupId>
-      <artifactId>geronimo-spec-j2ee</artifactId>
-      <version>1.4-rc4</version>
     </dependency>
     <dependency>
       <groupId>activemq</groupId>
