--- a/gbuild-agent/pom.xml
+++ b/gbuild-agent/pom.xml
@@ -87,8 +87,13 @@
     </dependency>
     <dependency>
       <groupId>geronimo-spec</groupId>
-      <artifactId>geronimo-spec-j2ee</artifactId>
-      <version>1.4-rc4</version>
+      <artifactId>geronimo-spec-jms</artifactId>
+      <version>1.1-rc4</version>
+    </dependency>
+    <dependency>
+      <groupId>geronimo-spec</groupId>
+      <artifactId>geronimo-spec-j2ee-management</artifactId>
+      <version>1.0-rc4</version>
     </dependency>
     <dependency>
       <groupId>activemq</groupId>
