--- a/gbuild-report/pom.xml
+++ b/gbuild-report/pom.xml
@@ -1,7 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project>
+  <parent>
+    <artifactId>gbuild-parent</artifactId>
+    <groupId>org.apache.geronimo.gbuild</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.geronimo.gbuild</groupId>
   <artifactId>gbuild-report</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
