--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
     </mailingList>
     <mailingList>
       <name>GBuild User List</name>
-      <subscribe>users-subscribe@maven.apache.org</subscribe>
-      <unsubscribe>users-unsubscribe@maven.apache.org</unsubscribe>
+      <subscribe>users-subscribe@geronimo.apache.org</subscribe>
+      <unsubscribe>users-unsubscribe@geronimo.apache.org</unsubscribe>
       <archive>http://mail-archives.apache.org/mod_mbox/geronimo-users/</archive>
     </mailingList>
     <mailingList>
@@ -84,6 +84,27 @@
     <url>http://www.apache.org/</url>
   </organization>
   <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.4</source>
+          <target>1.4</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-maven-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>descriptor</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
