--- a/gbuild-agent-web/pom.xml
+++ b/gbuild-agent-web/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>gbuild-agent-web</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>GBuild Agent</name>
+  <name>GBuild Agent Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
