--- a/gbuild-agent/pom.xml
+++ b/gbuild-agent/pom.xml
@@ -56,10 +56,27 @@
       <version>1.0-rc4</version>
     </dependency>
     <dependency>
-      <groupId>activemq</groupId>
+      <groupId>incubator-activemq</groupId>
       <artifactId>activemq-core</artifactId>
-      <version>3.2</version>
     </dependency>
+
+    <!-- ActiveMQ deps -->
+    <dependency>
+      <groupId>backport-util-concurrent</groupId>
+      <artifactId>backport-util-concurrent</artifactId>
+      <version>2.0_01_pd</version>
+    </dependency>
+    <dependency>
+      <groupId>activeio</groupId>
+      <artifactId>activeio</artifactId>
+      <version>2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.1.1.0</version>
+    </dependency>
+     
 
     <dependency>
       <groupId>junit</groupId>
