--- a/continuum-core/src/test/resources/log4j.properties
+++ b/continuum-core/src/test/resources/log4j.properties
@@ -4,6 +4,7 @@ log4j.appender.root.layout=org.apache.log4j.PatternLayout
 log4j.appender.root.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
 
 # JPOX Categories
+log4j.category=INFO, root
 #log4j.category.JPOX=WARN, root
 log4j.category.JPOX.RDBMS=ERROR, root
 #log4j.category.JPOX.RDBMS.Schema=WARN, root
