Attempting to get gbuild agent to work with the activemq-4.0-M4 rc
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@369664 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
       <layout>legacy</layout>
     </repository>
     <repository>
+      <id>dblevins</id>
+      <name>Apche Repository</name>
+      <url>http://people.apache.org/~dblevins/maven</url>
+      <layout>legacy</layout>
+    </repository>
+    <repository>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -184,7 +190,7 @@
       <dependency>
         <groupId>incubator-activemq</groupId>
         <artifactId>activemq-core</artifactId>
-        <version>4.0-20060114.225444</version>
+        <version>4.0-M4</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
