--- a/gbuild-agent/pom.xml
+++ b/gbuild-agent/pom.xml
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-cvs</artifactId>
-      <version>1.0-beta-1-SNAPSHOT</version>
+      <version>1.0-beta-2</version>
     </dependency>
     <dependency>
       <groupId>geronimo-spec</groupId>
