upgraded the cvs provider version
git-svn-id: https://svn.apache.org/repos/asf/geronimo/gbuild/trunk@370362 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
       <dependency>
         <groupId>org.apache.maven.scm</groupId>
         <artifactId>maven-scm-provider-cvs</artifactId>
-        <version>1.0-beta-1-SNAPSHOT</version>
+        <version>1.0-beta-2</version>
       </dependency>
       <dependency>
         <groupId>incubator-activemq</groupId>
