--- a/gbuild-agent-application/pom.xml
+++ b/gbuild-agent-application/pom.xml
@@ -104,6 +104,11 @@
       <version>1.1-alpha-1</version>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-appserver</artifactId>
+      <version>1.0-alpha-5</version>
+    </dependency>
+    <dependency>
       <groupId>plexus</groupId>
       <artifactId>plexus-container-artifact</artifactId>
       <version>1.0-alpha-3</version>
@@ -114,19 +119,10 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.apache.maven</groupId>-->
-      <!--<artifactId>maven-artifact</artifactId>-->
-      <!--<scope>runtime</scope>-->
-    <!--</dependency>-->
     <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-appserver</artifactId>
-      <version>1.0-alpha-5</version>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-artifact</artifactId>
+      <version>2.0-1</version>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.codehaus.plexus</groupId>-->
-      <!--<artifactId>plexus-utils</artifactId>-->
-    <!--</dependency>-->
   </dependencies>
 </project>
