--- a/continuum-core/pom.xml
+++ b/continuum-core/pom.xml
@@ -35,6 +35,10 @@
       <artifactId>plexus-mail-sender-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-security-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-test</artifactId>
       <scope>test</scope>
