--- a/pom.xml
+++ b/pom.xml
@@ -395,6 +395,16 @@
         <artifactId>quartz</artifactId>
         <version>1.4.5</version>
       </dependency>
+      <dependency>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-security-api</artifactId>
+        <version>1.0-alpha-3-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-security-summit</artifactId>
+        <version>1.0-alpha-3-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <distributionManagement>
