Use plexus-scheduler.
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@376641 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/pom.xml
+++ b/continuum-web/pom.xml
@@ -48,8 +48,8 @@
       <artifactId>plexus-formica</artifactId>
     </dependency>
     <dependency>
-      <groupId>quartz</groupId>
-      <artifactId>quartz</artifactId>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-quartz</artifactId>
     </dependency>
     <dependency>
       <groupId>servletapi</groupId>
