--- a/continuum-core/pom.xml
+++ b/continuum-core/pom.xml
@@ -113,8 +113,8 @@
       <artifactId>maven-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>quartz</groupId>
-      <artifactId>quartz</artifactId>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-quartz</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
