--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -13,7 +13,7 @@
       <plugin>
         <groupId>org.codehaus.modello</groupId>
         <artifactId>modello-maven-plugin</artifactId>
-        <version>1.0-alpha-8</version>
+        <version>1.0-alpha-9-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
