--- a/continuum-plexus-application/pom.xml
+++ b/continuum-plexus-application/pom.xml
@@ -105,6 +105,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
+      <artifactId>maven-scm-provider-bazaar</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-perforce</artifactId>
       <scope>runtime</scope>
     </dependency>
@@ -218,12 +222,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
-      <artifactId>maven-scm-provider-cvs</artifactId>
+      <artifactId>maven-scm-provider-cvsexe</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
-      <artifactId>maven-scm-provider-svn</artifactId>
+      <artifactId>maven-scm-provider-svnexe</artifactId>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
