--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
     <module>continuum-model</module>
     <module>continuum-notifiers</module>
     <module>continuum-plexus-application</module>
+    <module>continuum-rpc-client</module>
     <module>continuum-store</module>
     <module>continuum-test</module>
     <module>continuum-web</module>
@@ -261,7 +262,7 @@
       <dependency>
         <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ssh</artifactId>
-        <version>1.0-alpha-6</version>
+        <version>1.0-alpha-7</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.wagon</groupId>
