--- a/continuum-web/pom.xml
+++ b/continuum-web/pom.xml
@@ -52,8 +52,8 @@
       <artifactId>plexus-quartz</artifactId>
     </dependency>
     <dependency>
-      <groupId>servletapi</groupId>
-      <artifactId>servletapi</artifactId>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
       <version>2.3</version>
     </dependency>
     <dependency>
