[CONTINUUM-609] add a deployment repository to be used at the end of a Maven 2 build to deploy artifacts, if configured. Note that the MDO is changed, but its safe - JPOX updates the database with a nulled field as desired.
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@385975 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-web/src/main/resources/WEB-INF/web.xml
+++ b/continuum-web/src/main/resources/WEB-INF/web.xml
@@ -11,6 +11,11 @@
     <load-on-startup>6</load-on-startup>
   </servlet>
   <servlet>
+    <servlet-name>repository</servlet-name>
+    <servlet-class>org.apache.maven.continuum.web.servlet.RepositoryBrowseServlet</servlet-class>
+    <load-on-startup>7</load-on-startup>
+  </servlet>
+  <servlet>
     <servlet-name>continuum</servlet-name>
     <servlet-class>org.codehaus.plexus.summit.Summit</servlet-class>
     <load-on-startup>5</load-on-startup>
@@ -27,6 +32,10 @@
   <servlet-mapping>
     <servlet-name>browse</servlet-name>
     <url-pattern>/continuum/browse</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>repository</servlet-name>
+    <url-pattern>/repository/*</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>continuum</servlet-name>
