add snapshot repo for plexus plugin
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@387185 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,16 @@
       <url>http://snapshots.maven.codehaus.org/maven2</url>
     </repository>
   </repositories>
+  <pluginsRepositories>
+    <pluginsRepository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <id>snapshots</id>
+      <name>Maven Central Development Repository</name>
+      <url>http://snapshots.maven.codehaus.org/maven2</url>
+    </pluginsRepository>
+  </pluginsRepositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
