--- a/pom.xml
+++ b/pom.xml
@@ -72,16 +72,16 @@
       <url>http://snapshots.maven.codehaus.org/maven2</url>
     </repository>
   </repositories>
-  <pluginsRepositories>
-    <pluginsRepository>
+  <pluginRepositories>
+    <pluginRepository>
       <releases>
         <enabled>false</enabled>
       </releases>
       <id>snapshots</id>
       <name>Maven Central Development Repository</name>
       <url>http://snapshots.maven.codehaus.org/maven2</url>
-    </pluginsRepository>
-  </pluginsRepositories>
+    </pluginRepository>
+  </pluginRepositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
