[CONTINUUM-586] Upgrade to JDO2/JPOX rc1
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@387529 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-model/pom.xml
+++ b/continuum-model/pom.xml
@@ -30,8 +30,8 @@
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>maven-jpox-plugin</artifactId>
-        <version>1.0.1</version>
+        <artifactId>jpox-maven-plugin</artifactId>
+        <version>1.0.2-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
