[CONTINUUM-589] Use jpox-dbcp for improving performance
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@387535 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-plexus-application/pom.xml
+++ b/continuum-plexus-application/pom.xml
@@ -238,5 +238,10 @@
       <artifactId>maven-scm-provider-svnexe</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>jpox</groupId>
+      <artifactId>jpox-dbcp</artifactId>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
