--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,11 @@
         <version>1.1.0-rc-1</version>
       </dependency>
       <dependency>
+        <groupId>jpox</groupId>
+        <artifactId>jpox-dbcp</artifactId>
+        <version>1.1.0-rc-1</version>
+      </dependency>
+      <dependency>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-utils</artifactId>
         <version>1.2-SNAPSHOT</version>
