Exclude some dependencies (xmlParserApis and xercesImpl ) that come from jdo2, so continuum can build under jdk 1.5 and jdk 1.4
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@387845 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,14 @@
             <artifactId>ojdbc</artifactId>
             <groupId>ojdbc</groupId>
           </exclusion>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xmlParserAPIs</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -290,6 +298,16 @@
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-jdo2</artifactId>
         <version>1.0-alpha-4-SNAPSHOT</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xmlParserAPIs</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.codehaus.plexus</groupId>
