Revert Brett's change, because we don't want enhanced compiled classes with jdo stuff
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@389237 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-rpc-client/pom.xml
+++ b/continuum-rpc-client/pom.xml
@@ -31,9 +31,27 @@
       <artifactId>commons-logging</artifactId>
       <version>1.0.2</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.maven.continuum</groupId>
-      <artifactId>continuum-model</artifactId>
-    </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.modello</groupId>
+        <artifactId>modello-maven-plugin</artifactId>
+        <version>1.0-alpha-9-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <version>1.0.0</version>
+          <packageWithVersion>false</packageWithVersion>
+          <model>../continuum-model/src/main/mdo/continuum.mdo</model>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
