Use snapshot version of jpox rc2 (with patch http://www.jpox.org/servlet/jira/browse/CORE-2771 applied).
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/branches/continuum-1.0.x@394059 13f79535-47bb-0310-9956-ffa450edef68

--- a/continuum-core/pom.xml
+++ b/continuum-core/pom.xml
@@ -20,7 +20,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>jpox</groupId>
+      <groupId>org.apache.maven.continuum.jpox</groupId>
       <artifactId>jpox</artifactId>
     </dependency>
     <dependency>
