--- a/gbuild-agent-application/pom.xml
+++ b/gbuild-agent-application/pom.xml
@@ -1,14 +1,17 @@
 <project>
+  <modelVersion>4.0.0</modelVersion>
+  
   <parent>
     <artifactId>gbuild-parent</artifactId>
     <groupId>org.apache.geronimo.gbuild</groupId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
+  
   <artifactId>gbuild-agent-application</artifactId>
-  <packaging>plexus-application</packaging>
   <name>GBuild Agent Application</name>
-  <version>1.0-SNAPSHOT</version>
+  <packaging>plexus-application</packaging>
+  
   <build>
     <plugins>
       <plugin>
@@ -22,7 +25,7 @@
         </executions>
         <configuration>
           <descriptor>src/assembly/bin.xml</descriptor>
-          <finalName>gbuild-agent-1.0-SNAPSHOT</finalName>
+          <finalName>gbuild-agent-${pom.version}</finalName>
         </configuration>
       </plugin>
       <plugin>
@@ -49,10 +52,12 @@
       </plugin>
     </plugins>
   </build>
+  
   <profiles>
     <profile>
       <id>env-test</id>
       <activation>
+        <activeByDefault>true</activeByDefault>
         <property>
           <name>env</name>
           <value>test</value>
@@ -75,39 +80,37 @@
       </properties>
     </profile>
   </profiles>
-  <repositories>
-    <repository>
-      <id>apache.snapshots</id>
-      <url>http://cvs.apache.org/repository</url>
-      <layout>legacy</layout>
-    </repository>
-  </repositories>
+  
   <dependencies>
     <dependency>
-      <groupId>org.apache.geronimo.gbuild</groupId>
+      <groupId>${pom.groupId}</groupId>
       <artifactId>gbuild-agent</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${pom.version}</version>
     </dependency>
+    
     <dependency>
-      <groupId>org.apache.geronimo.gbuild</groupId>
+      <groupId>${pom.groupId}</groupId>
       <artifactId>gbuild-agent-web</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${pom.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.8</version>
     </dependency>
+    
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-log4j-logging</artifactId>
       <version>1.1-alpha-1</version>
     </dependency>
+    
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-appserver</artifactId>
       <version>1.0-alpha-5</version>
     </dependency>
+    
     <dependency>
       <groupId>plexus</groupId>
       <artifactId>plexus-container-artifact</artifactId>
@@ -119,6 +122,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+    
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
