--- a/gbuild-agent-web/pom.xml
+++ b/gbuild-agent-web/pom.xml
@@ -1,21 +1,25 @@
 <project>
-  <parent>
-    <artifactId>gbuild-parent</artifactId>
-    <groupId>org.apache.geronimo.gbuild</groupId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
+  
+  <parent>
+    <groupId>org.apache.geronimo.gbuild</groupId>
+    <artifactId>gbuild-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
+  
   <artifactId>gbuild-agent-web</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>GBuild Agent Webapp</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
+  <url>http://geronimo.apache.org</url>
+  
   <dependencies>
     <dependency>
-      <groupId>org.apache.geronimo.gbuild</groupId>
+      <groupId>${pom.groupId}</groupId>
       <artifactId>gbuild-agent</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${pom.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-service-jetty</artifactId>
@@ -28,46 +32,40 @@
         </exclusion>
       </exclusions>
     </dependency>
+    
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-api</artifactId>
-      <version>1.1-SNAPSHOT</version>
     </dependency>
+    
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-core</artifactId>
-      <version>1.1-SNAPSHOT</version>
     </dependency>
+    
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-model</artifactId>
-      <version>1.1-SNAPSHOT</version>
     </dependency>
+    
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-command-line</artifactId>
-      <version>1.0-alpha-2</version>
     </dependency>
-
+    
     <dependency>
-      <groupId>geronimo-spec</groupId>
-      <artifactId>geronimo-spec-jms</artifactId>
-      <version>1.1-rc4</version>
-      <scope>provided</scope>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jms_1.1_spec</artifactId>
     </dependency>
-
+    
     <dependency>
-      <groupId>geronimo-spec</groupId>
-      <artifactId>geronimo-spec-servlet</artifactId>
-      <version>2.4-rc4</version>
-      <scope>provided</scope>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
     </dependency>
-
+    
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-servlet_2.4_spec</artifactId>
     </dependency>
   </dependencies>
 </project>
