--- a/gbuild-agent/pom.xml
+++ b/gbuild-agent/pom.xml
@@ -1,25 +1,20 @@
 <project>
+  <modelVersion>4.0.0</modelVersion>
+  
   <parent>
     <artifactId>gbuild-parent</artifactId>
     <groupId>org.apache.geronimo.gbuild</groupId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
+  
+  
   <artifactId>gbuild-agent</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>GBuild Agent</name>
+  <packaging>jar</packaging>
   <url>http://geronimo.apache.org</url>
+  
   <dependencies>
-
-    <!-- need this till my activemq-core-3.2.pom patch is applied -->
-    <!-- http://jira.codehaus.org/browse/MEV-193 -->
-    <dependency>
-      <groupId>concurrent</groupId>
-      <artifactId>concurrent</artifactId>
-      <version>1.3.4</version>
-    </dependency>
-
     <dependency>
       <groupId>org.apache.maven.continuum</groupId>
       <artifactId>continuum-api</artifactId>
@@ -35,28 +30,25 @@
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-command-line</artifactId>
-      <version>1.0-alpha-2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.scm</groupId>
       <artifactId>maven-scm-provider-cvs</artifactId>
     </dependency>
     <dependency>
-      <groupId>geronimo-spec</groupId>
-      <artifactId>geronimo-spec-jms</artifactId>
-      <version>1.1-rc4</version>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jms_1.1_spec</artifactId>
     </dependency>
     <dependency>
-      <groupId>geronimo-spec</groupId>
-      <artifactId>geronimo-spec-j2ee-management</artifactId>
-      <version>1.0-rc4</version>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
     </dependency>
+    
+    <!-- ActiveMQ deps -->
     <dependency>
       <groupId>incubator-activemq</groupId>
       <artifactId>activemq-core</artifactId>
     </dependency>
-
-    <!-- ActiveMQ deps -->
     <dependency>
       <groupId>backport-util-concurrent</groupId>
       <artifactId>backport-util-concurrent</artifactId>
@@ -72,13 +64,9 @@
       <artifactId>derby</artifactId>
       <version>10.1.1.0</version>
     </dependency>
-
-
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>concurrent</groupId>
+      <artifactId>concurrent</artifactId>
     </dependency>
   </dependencies>
 </project>
