--- a/gbuild-report/pom.xml
+++ b/gbuild-report/pom.xml
@@ -1,15 +1,18 @@
 <project>
+  <modelVersion>4.0.0</modelVersion>
+  
   <parent>
     <artifactId>gbuild-parent</artifactId>
     <groupId>org.apache.geronimo.gbuild</groupId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
+  
   <artifactId>gbuild-report</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
   <name>GBuild Report</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
+  <url>http://geronimo.apache.org</url>
+  
   <build>
     <plugins>
       <plugin>
@@ -34,17 +37,12 @@
       </plugin>
     </plugins>
   </build>
+  
   <dependencies>
     <dependency>
       <groupId>velocity</groupId>
       <artifactId>velocity</artifactId>
       <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
